Removed categories and tags

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png" />
   
   <!-- Style & Font -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/css/main.css" />
   <link href='//fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
 
 </head>
