Added contact page and wufoo form

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,16 +1,16 @@
-<!doctype html> 
-<html lang="{{ .Site.LanguageCode }}"> 
+<!doctype html>
+<html lang="{{ .Site.LanguageCode }}">
 <head>
   <meta charset="utf-8">
   <title>{{ .Site.Title }}</title>
   <meta name="author" content="{{ .Site.Author.name }}">
   <meta name="description" content="{{ .Site.Params.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <!-- Icons -->
   <link rel="icon" href="/favicon.png" />
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png" />
-  
+
   <!-- Style & Font -->
   <link rel="stylesheet" href="/css/main.css" />
   <link href='//fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
@@ -18,8 +18,16 @@
 </head>
 <body>
 
-  <div class="wrap">
-    <header class="mb">
-      <h1 class="h2 m-0"><a href="/">{{ .Site.Title }}</a></h1>
-      <p>{{ .Site.Params.description }}</p>
+    <header>
+      <h1><a href="/">{{ .Site.Title }}</a></h1>
+
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
+
+        </ul>
+      </nav>
+
     </header>
