--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,12 +2,20 @@
 <main class="posts">
   <article class="post">
     {{ range .Data.Pages.GroupByDate "2006" }}
-	<h2>{{ .Key }}</h2>
-		{{ range .Pages }}
-	    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-		<p>{{ .Params.excerpt }}</p>
-		{{ end }}
-	{{ end }}
+    <h2>{{ .Key }}</h2>
+        {{ range .Pages }}
+          <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+          <p>
+            {{if .Params.excerpt}}
+              {{ .Params.excerpt }}
+            {{ else }}
+              {{ .Summary }}
+            {{ end }}
+            <br />
+            <a href="{{ .Permalink }}">Continue reading...</a>
+          </p>
+        {{ end }}
+    {{ end }}
   </article>
 </main>
 {{ partial "foot.html" . }}
