--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,8 @@
 {{ partial "head.html" . }}
 <main>
-<article class="post">
-  <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
-  {{ .Content }}
-  <p class="small gray"><time datetime="{{ .Date.Format "2006-01-30" }}">{{ .Date.Format "Jan 01, 2006" }}</time></p>
-  {{ partial "disqus.html" . }}
-</article>
+  <article>
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
+  </article>
 </main>
 {{ partial "foot.html" . }}
