--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,6 +24,7 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
+          <li><a href="/articles">Articles</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
           <li><a href="/speaking">Speaking</a></li>
