--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
   <!-- Style & Font -->
   <link rel="stylesheet" href="/css/main.css" />
-  <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Noto+Sans:400,400italic,700|Oswald' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
