Update title, deploy, content, style

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ partial "head.html" . }}
 <main>
   <article>
-    <h1>{{ .Title }}</h1>
+    <h1 class="page-title">{{ .Title }}</h1>
     {{ .Content }}
   </article>
 </main>
