--- a/layouts/section/articles.html
+++ b/layouts/section/articles.html
@@ -3,18 +3,11 @@
   <article class="post">
     {{ range .Data.Pages.GroupByDate "2006" }}
     <h2>{{ .Key }}</h2>
+      <ul>
         {{ range .Pages }}
-          <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-          <p>
-            {{if .Params.excerpt}}
-              {{ .Params.excerpt }}
-            {{ else }}
-              {{ .Summary }}
-            {{ end }}
-            <br />
-            <a href="{{ .Permalink }}">Continue reading...</a>
-          </p>
+          <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
         {{ end }}
+      </ul>
     {{ end }}
   </article>
 </main>
