--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,15 +14,24 @@
   <!-- Style & Font -->
   <link rel="stylesheet" href="/css/main.css" />
   <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Noto+Sans:400,400italic,700|Oswald' rel='stylesheet' type='text/css'>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-313050-4', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
-
+  <div class="container">
     <header>
-      <h1><a href="/">{{ .Site.Title }}</a></h1>
+      <p class="site-title"><a href="/">{{ .Site.Title }}</a></p>
 
       <nav>
-        <ul>
+        <ul class="menu clearfix">
           <li><a href="/">Home</a></li>
           <li><a href="/articles">Articles</a></li>
           <li><a href="/about">About</a></li>
