--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'normalize';
 @import 'verticalrhythm';
+@import 'timeline';
 
 .clearfix:after {
      visibility: hidden;
@@ -64,3 +65,4 @@
 /*Hover state for top level links*/
 .menu li:hover a {
 }
+
